--- a/packages/troika-three-text/package.json
+++ b/packages/troika-three-text/package.json
@@ -20,7 +20,7 @@
     "webgl-sdf-generator": "1.1.1"
   },
   "peerDependencies": {
-    "three": ">=0.125.0"
+    "three": "*"
   },
   "devDependencies": {
     "@fredli74/typr": "0.3.7",
